# ROScovery-back

./: README.md
api/: api.service
api/pos/global/: bb8-1.yaml  bb8-2.yaml  bb8.yaml  walle-2.yaml
api/pos/local/: walle-1.yaml
api/src/api/: main.go
map-processing/Projet_ROB/: .gitignore  CMakeLists.txt  Makefile  Projet_ROB.cbp
map-processing/Projet_ROB/Maps/: map306ImmersionCdF12082017.pgm  mapJPORennes3Mars2017.pgm
map-processing/Projet_ROB/Maps/Brest/: map_2.pgm  map_3.pgm
map-processing/Projet_ROB/Maps/Nantes/: mapJPONantes.pgm
map-processing/Projet_ROB/Maps/grandesMaps/: my_map.pgm  my_map.yaml  my_map2.yaml  my_map3.pgm  my_map3.yaml  my_map4.pgm  my_map4.yaml
map-processing/Projet_ROB/src/: Projet_ROB.cpp  Projet_ROB.h  functions.cpp  functions.h
map-processing/Sources/: Main.cpp  Main.hpp  Makefile  Test  map_4.pgm  map_5.pgm
ros/: frontend.md
rsc/maps/: map30611Mai.yaml  map30611Mai_ok.yaml  map306Fev2017.yaml  map306ImmersionCdF12082017.yaml  mapCM230625Avril.pgm  mapCM230625Avril.yaml  mapJPOBrest11fev.yaml  mapJPONantes.yaml  mapJPONantes4Mars.pgm  mapJPONantes4Mars.yaml  mapJPONantesDec2018.pgm  mapJPONantesDec2018.yaml  mapJPONantes_ok.yaml  mapJPORennes3Mars2017.yaml  maptest306.pgm  maptest306.yaml
